--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <!-- Full HTML block content injected -->
-<h1 class="wp-block-heading has-text-align-center has-text-color has-link-color" style="color:#c4047c">🐾 Prototype AI Assistant for Village Vet</h1>
+<h1 class="wp-block-heading has-text-align-center has-text-color has-link-color" style="color:#c4047c">🐾 Prototype AI Chatbot for Village Vet</h1>
 <p><strong>A smarter, simpler way to serve clients — 24/7, across every location.</strong><br>This working demo shows how a custom-trained chatbot could operate directly on your website, offering instant support, reducing admin pressure, and enhancing client experience.</p>
 <hr class="wp-block-separator has-text-color has-alpha-channel-opacity has-background is-style-dots" style="background-color:#c4047c;color:#c4047c"/>
 <h3 class="wp-block-heading has-text-color has-link-color" style="color:#c4047c">💬 What This Demo Shows</h3>
