--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Village Vet Demo</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 2rem; max-width: 900px; margin: auto; }
+    body { font-family: Arial, sans-serif; padding: 2rem; max-width: 900px; margin: auto; line-height: 1.6; }
     .wp-block-heading { font-weight: bold; }
     .has-text-color { color: #c4047c; }
     .has-background { background-color: #c4047c; }
