--- a/index.html
+++ b/index.html
@@ -108,18 +108,7 @@ This working demo shows how a custom-trained chatbot could operate directly on y
 <div class="spacer"></div>
 
 <script>
-(function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){
-  window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};
-  window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)});}
-  const onLoad=function(){
-    const script=document.createElement("script");
-    script.src="https://www.chatbase.co/embed.min.js";
-    script.id="MEvJIJpkRl179-SlbFnNa";
-    script.domain="www.chatbase.co";
-    document.body.appendChild(script);
-  };
-  if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad);}
-})();
+(function(){if(!window.chatbase||window.chatbase("getState")!=="initialized"){window.chatbase=(...arguments)=>{if(!window.chatbase.q){window.chatbase.q=[]}window.chatbase.q.push(arguments)};window.chatbase=new Proxy(window.chatbase,{get(target,prop){if(prop==="q"){return target.q}return(...args)=>target(prop,...args)}})}const onLoad=function(){const script=document.createElement("script");script.src="https://www.chatbase.co/embed.min.js";script.id="MEvJIJpkRl179-SlbFnNa";script.domain="www.chatbase.co";document.body.appendChild(script)};if(document.readyState==="complete"){onLoad()}else{window.addEventListener("load",onLoad)}})();
 </script>
 
 </body>
